starting to add instructions

--- a/web/chat/www/style.css
+++ b/web/chat/www/style.css
@@ -46,3 +46,37 @@ canvas {
 	width: 100% !important;
 	height: auto !important;
 }
+
+#inst_div h2 {
+	font-size:18px;
+	font-weight:normal;
+	padding-bottom:0;
+	margin-bottom: 5px;
+}
+
+#inst_div p {
+	font-size: 14px;
+}
+
+#inst_div {
+	font-size: 14px;
+}
+
+.alert {
+    display: flex;
+    flex-direction: row;
+}
+
+.alert .glyphicon {
+    margin-right: 8px;
+    align-self: center; // if you want it centered vertically
+}
+
+.expand_caret {
+    transform: scale(1.0);
+    margin-left: 8px;
+    margin-top: -4px;
+}
+button[aria-expanded='true'] > .expand_caret {
+    transform: scale(1.0) rotate(-180deg);
+}
